# Cloud-Management-Panel

./: .drone.yml  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  cffi-1.15.0-cp39-cp39-linux_armv7l.whl  docker-compose.yml  poetry.toml  pyproject.toml  requirements.txt  testpoetry.py
.github/workflows/: main.yml
assets/bootstrap/: static.js
cloud/: pyvenv.cfg
cloudpanel/: manage.py  settings.py  urls.py
cloudpanel/assets/: script.js
cloudpanel/assets/css/: blog.css
cloudpanel/cloudpanel/: settings.py  urls.py  wsgi.py
cloudpanel/explorer/: models.py  views.py
cloudpanel/explorer/migrations/: 0001_initial.py  0002_servers_path.py
cloudpanel/manager/: form.py  views.py
cloudpanel/templates/: addserver.html  base.html  home.html  manage.html  removeserver.html  server.html
dockerenv/: docker-compose.yml
explorer/: admin.py  forms.py
explorer/migrations/: 0003_auto_20180227_2044.py  0004_alter_servers_path.py
github/workflows/: main.yml
kubernetes/: config-maps.yml
manager/: views.py
templates/: base.html
