[tool.poetry]
name = "cloud-management-panel"
version = "0.1.0"
description = ""
authors = ["Safa Bayar <rectionxx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
psycopg2 = "^2.8.5"
psycopg2_binary = "^2.8.5"
paramiko = "^2.7.1"
urllib3 = "^1.26.7"
tzdata = "^2021.5"
sqlparse = "^0.4.2"
pycparser = "^2.21"

[tool.poetry.dev-dependencies]
requests = "2.25.0"
pytest = "^6.2.5"
cryptography = "^36.0.0"
cffi = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = 'pypi_'  # needed until python-poetry/poetry#3456 is resolved.
url = 'https://pypi.org/simple'

[[tool.poetry.source]]
name = "piwheels"
url = "https://piwheels.org/simple/" 
secondary = true
